sass/components/_header.sass
header
  background: var(--secondary-bg-color)
  border-radius: 0px 0px 10px 10px
  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.1)
  display: flex
  justify-content: space-between
  padding: 30px 45px
  vertical-align: middle
  *
    display: flex
    align-items: center
    gap: 15px
  .left img
      width: 35px
  .right a
    color: var(--cta-lighter-color)
    font-weight: 600
    &:not(:last-of-type)::after
      content: "·"
      color: var(--text-color)
      font-weight: bolder
      pointer-events: none

@media only screen and (max-width: 800px)
  header
    flex-wrap: wrap
    .right
      margin-top: 10px
      flex-wrap: wrap
    *
      gap: 10px

